--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,29 @@
-sphinx
-furo
-sphinxext-opengraph
-sphinx-tabs
+alabaster==0.7.12
+Babel==2.9.1
+beautifulsoup4==4.10.0
+certifi==2021.5.30
+charset-normalizer==2.0.6
+docutils==0.16
+furo==2021.9.22
+idna==3.2
+imagesize==1.2.0
+Jinja2==3.0.2
+MarkupSafe==2.0.1
+packaging==21.0
+Pygments==2.10.0
+pyparsing==2.4.7
+pytz==2021.3
+requests==2.26.0
+snowballstemmer==2.1.0
+soupsieve==2.2.1
+Sphinx==4.2.0
+sphinx-tabs==3.2.0
+sphinx_inline_tabs==2021.8.17b10
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+sphinxext-opengraph==0.4.2
+urllib3==1.26.7
