Fix package discovery

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,12 @@ version = 0.0.1
 [options]
 package_dir =
     =src
-packages = cake
+packages = find_namespace:
 install_requires =
     requests
 
 [options.extras_require]
 dev = pytest
+
+[options.packages.find]
+where = src
