--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,5 @@
 # From: https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md#github-cache
+# See also: https://github.com/docker/build-push-action/blob/master/docs/advanced/local-registry.md
 # See also: https://evilmartians.com/chronicles/build-images-on-github-actions-with-docker-layer-caching
 
 name: test
@@ -11,6 +12,11 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
     steps:
       -
         name: Checkout
@@ -18,13 +24,18 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: network=host
       -
-        name: Build and push
+        name: Build image and push locally
         uses: docker/build-push-action@v2
         with:
           context: .
           file: test/Dockerfile
-          push: false
-          tags: crl:test
+          push: true
+          tags: localhost:5000/cakerobotics/crl:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      -
+        name: Run tests
+        run: docker run --rm -t localhost:5000/cakerobotics/crl:test
