--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,11 @@ package_dir =
     =src
 packages = find_namespace:
 install_requires =
-    requests
+    jinja2
+
+[options.entry_points]
+console_scripts =
+    cake-bundler = cake.bundler.main:main
 
 [options.extras_require]
 dev = pytest
