Add local CRL option to bundler

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
             "request": "launch",
             "module": "pytest",
             "args": [
-                "-x"
+                "-x",
+                "--ignore=examples"
             ]
         },
         {
