Make bundler independent of crl core

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    cake-bundler = cake.bundler.main:main
+    cake-bundler = cake_bundler.main:main
 
 [options.extras_require]
 dev = pytest
