Add navigation module

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ packages = find_namespace:
 install_requires =
     jinja2
     pyyaml
+    transforms3d
 
 [options.entry_points]
 console_scripts =
