Update IDE config for galactic on ubuntu

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "args": [
                 "-x",
                 "--ignore=examples"
-            ]
+            ],
+            "env": {"PYTHONPATH": "${workspaceFolder}/src:/opt/ros/galactic/lib/python3.8/site-packages:${env:PYTHONPATH}"}
         },
         {
             "name": "Pytest Last Failed",
@@ -21,14 +22,16 @@
             "module": "pytest",
             "args": [
                 "--lf"
-            ]
+            ],
+            "env": {"PYTHONPATH": "${workspaceFolder}/src:/opt/ros/galactic/lib/python3.8/site-packages:${env:PYTHONPATH}"}
         },
         {
             "name": "Pytest Current File",
             "type": "python",
             "request": "launch",
             "module": "pytest",
-            "args": ["-x", "-s", "-v", "${file}"]
+            "args": ["-x", "-s", "-v", "${file}"],
+            "env": {"PYTHONPATH": "${workspaceFolder}/src:/opt/ros/galactic/lib/python3.8/site-packages:${env:PYTHONPATH}"}
         },
     ]
 }
