--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,42 +1,14 @@
-# From: https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md#github-cache
-# See also: https://github.com/docker/build-push-action/blob/master/docs/advanced/local-registry.md
-# See also: https://evilmartians.com/chronicles/build-images-on-github-actions-with-docker-layer-caching
-
-name: test
+name: Test
 
 on:
   push:
-    branches:
-      - 'main'
 
 jobs:
   docker:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
+    timeout-minutes: 10
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          driver-opts: network=host
-      -
-        name: Build image and push locally
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: test/Dockerfile
-          push: true
-          tags: localhost:5000/cakerobotics/crl:test
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      -
-        name: Run tests
-        run: docker run --rm -t localhost:5000/cakerobotics/crl:test
+      - name: Run tests
+        run: pip3 install . && python3 -m pytest
