Skip CI when docs or examples change

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,6 +2,11 @@ name: CI + CD
 
 on:
   push:
+    paths-ignore:
+      - '**.md'
+      - '.vscode/**'
+      - 'docs/**'
+      - 'examples/**'
 
 jobs:
   docker:
