--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -20,6 +20,7 @@ RUN apt-get install -y \
     python3-pip \
     ros-galactic-navigation2 \
     ros-galactic-nav2-bringup \
+    ros-galactic-ros1-bridge \
     ros-galactic-slam-toolbox
 
 RUN pip3 install \
